tests/lean/commandPrefix.lean
#check show Id Unit from do ()

abbr
